--- a/ai-chat/package.json
+++ b/ai-chat/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.15.5",
     "@openrouter/sdk": "^0.3.12",
     "axios": "^1.13.2",
     "cookie": "^1.1.1",
